--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/exampleBD
-#spring.datasource.url=jdbc:postgresql://localhost:5432/DBase
+#spring.datasource.url=jdbc:postgresql://localhost:5432/exampleBD
+spring.datasource.url=jdbc:postgresql://localhost:5432/DBase
 spring.datasource.username=user
 spring.datasource.password=000000
+
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 spring.jpa.hibernate.dialect=>org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -10,5 +13,11 @@ spring.jpa.hibernate.ddl-auto=update
 #update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.queries.users-query=select email, password, active from users where email=?
+spring.queries.roles-query=select u.email, r.role from users u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
+spring.datasource.initialization-mode=always
 
 #server.port=8888
