--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
 spring.jpa.hibernate.dialect=>org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #validate
 #update
 spring.jpa.show-sql=true
